# SPLN2324

./: README.md
TPC1/: README.md  word_freq.py
TPC2/: .gitignore  README.md  pyproject.toml
TPC2/word_freq/: __init__.py  parse_total_words.py
TPC3/: .metadata.json  README.md  makepyproject.py  pyproject.toml
TPC4/: README.md
TPC5/: README.md  tpc5.py
TPC6/: README.md  friends.py
