[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend= "flit_core.buildapi"

[project]
name ="makepyproject"
authors = [
    {name = "duarte", email = "duarte.g.parente@gmail.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dynamic = ["version","description"]

dependencies = []

[project.scripts]
makepyproject = "makepyproject:main"                     